--- a/anime.html
+++ b/anime.html
@@ -240,11 +240,11 @@
             <video src="vid1.mp4" autoplay></video>
             <div class="frontOver">
                 <span><i class="fas fa-star">フットサルボーイズ!!!!!</i></span>
-                <span><i class="fas fa-star">tonton nanti</i></span>
-                <span><i class="fas fa-star">bagikan</i></span>
+                <span><i class="fas fa-clock">tonton nanti</i></span>
+                <span><i class="fas fa-share">bagikan</i></span>
                 <span><i class="fab fa-youtube-square"></i></span>
-                <span><i class="fas fa-star">tonton di youtube</i></span>
-                <span><i class="fas fa-star">h</i></span>
+                <span><i class="fab fa-youtube-square">tonton di youtube</i></span>
+                <span><i class="fas fa-dot-circle"></i></span>
             </div>
         </div>
     </section>
