--- a/batch.html
+++ b/batch.html
@@ -77,7 +77,7 @@
 
     <section class="season">
         <div class="contentBanner">
-            <h3>anime winter</h3>
+            <h3>daftar batch</h3>
 
             <div class="wrapper">
                 <div class="boxContent">
@@ -93,7 +93,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -109,7 +109,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -125,7 +125,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -141,7 +141,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -157,7 +157,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -173,7 +173,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -189,7 +189,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -205,7 +205,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -221,7 +221,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -237,7 +237,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -253,7 +253,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -269,7 +269,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -285,7 +285,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -301,7 +301,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -317,7 +317,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -333,7 +333,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -349,7 +349,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -365,7 +365,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -381,7 +381,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -397,7 +397,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">boruto the next generation</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -413,7 +413,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">shingeki no kyojin</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -429,7 +429,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -445,7 +445,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -461,7 +461,7 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
                 <div class="boxContent">
@@ -477,12 +477,12 @@
                     </div>
                     <div class="contentText">
                         <h4><a href="anime.html">one piece</a></h4>
-                        <p>ongoing</p>
+                        <p>completed</p>
                     </div>
                 </div>
             </div>
 
-            <div class="paging">
+            <div class="pagging">
                 <ul>
                     <li>page 1 of 2</li>
                     <li><a href="">1</a></li>
