--- a/list_anime.html
+++ b/list_anime.html
@@ -32,10 +32,10 @@
 
             <div class="navbar">
                 <ul>
-                    <li><a href="">daftar anime</a></li>
-                    <li><a href="">anime terpopuler</a></li>
-                    <li><a href="">index batch</a></li>
-                    <li><a href="">anime musim dingin 2022</a></li>
+                    <li><a href="list_anime.html">daftar anime</a></li>
+                    <li><a href="populer.html">anime terpopuler</a></li>
+                    <li><a href="batch.html">index batch</a></li>
+                    <li><a href="season.html">anime musim dingin 2022</a></li>
                 </ul>
             </div>
 
@@ -57,7 +57,7 @@
 
     <div class="sidenav">
         <ul>
-            <li><a href="">daftar anime</a></li>
+            <li><a href="list_anime.html">daftar anime</a></li>
             <li><a href="">anime terpopuler</a></li>
             <div class="listAnime">
                 <ul>
@@ -71,8 +71,8 @@
                     <li><a href="">- karakai jouzu no takagi san</a></li>
                 </ul>
             </div>
-            <li><a href="">index batch</a></li>
-            <li><a href="">anime musim dingin 2022</a></li>
+            <li><a href="batch.html">index batch</a></li>
+            <li><a href="season.html">anime musim dingin 2022</a></li>
         </ul>
     </div>
 
@@ -113,7 +113,7 @@
             <div class="descriptionAnime">
                 <div class="contentBox">
                     <div class="image">
-                        <img src="img/img2.png" alt="">
+                        <img src="img/img30.png" alt="">
                     </div>
                     <div class="contentText">
                         <h4><a href="">kimetsu no yaiba</a></h4>
@@ -124,10 +124,43 @@
                 </div>
                 <div class="contentBox">
                     <div class="image">
-                        <img src="img/img2.png" alt="">
+                        <img src="img/img32.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4><a href="">kimetsu no yaiba</a></h4>
+                        <h4><a href="">boruto</a></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatem ex adipisci quaerat
+                            incidunt nisi quis quasi reiciendis unde hic. Quod, perspiciatis laboriosam inventore odio
+                            aliquid tempora quae animi tenetur.</p>
+                    </div>
+                </div>
+                <div class="contentBox">
+                    <div class="image">
+                        <img src="img/img29.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4><a href="">boku no hero</a></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatem ex adipisci quaerat
+                            incidunt nisi quis quasi reiciendis unde hic. Quod, perspiciatis laboriosam inventore odio
+                            aliquid tempora quae animi tenetur.</p>
+                    </div>
+                </div>
+                <div class="contentBox">
+                    <div class="image">
+                        <img src="img/img31.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4><a href="">futsal boys</a></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatem ex adipisci quaerat
+                            incidunt nisi quis quasi reiciendis unde hic. Quod, perspiciatis laboriosam inventore odio
+                            aliquid tempora quae animi tenetur.</p>
+                    </div>
+                </div>
+                <div class="contentBox">
+                    <div class="image">
+                        <img src="img/img28.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4><a href="">shigeki no kyojin</a></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatem ex adipisci quaerat
                             incidunt nisi quis quasi reiciendis unde hic. Quod, perspiciatis laboriosam inventore odio
                             aliquid tempora quae animi tenetur.</p>
@@ -138,7 +171,7 @@
                         <img src="img/img2.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4><a href="">kimetsu no yaiba</a></h4>
+                        <h4><a href="">dragon balls</a></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatem ex adipisci quaerat
                             incidunt nisi quis quasi reiciendis unde hic. Quod, perspiciatis laboriosam inventore odio
                             aliquid tempora quae animi tenetur.</p>
@@ -146,43 +179,10 @@
                 </div>
                 <div class="contentBox">
                     <div class="image">
-                        <img src="img/img2.png" alt="">
+                        <img src="img/img16.png" alt="">
                     </div>
                     <div class="contentText">
-                        <h4><a href="">kimetsu no yaiba</a></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatem ex adipisci quaerat
-                            incidunt nisi quis quasi reiciendis unde hic. Quod, perspiciatis laboriosam inventore odio
-                            aliquid tempora quae animi tenetur.</p>
-                    </div>
-                </div>
-                <div class="contentBox">
-                    <div class="image">
-                        <img src="img/img2.png" alt="">
-                    </div>
-                    <div class="contentText">
-                        <h4><a href="">kimetsu no yaiba</a></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatem ex adipisci quaerat
-                            incidunt nisi quis quasi reiciendis unde hic. Quod, perspiciatis laboriosam inventore odio
-                            aliquid tempora quae animi tenetur.</p>
-                    </div>
-                </div>
-                <div class="contentBox">
-                    <div class="image">
-                        <img src="img/img2.png" alt="">
-                    </div>
-                    <div class="contentText">
-                        <h4><a href="">kimetsu no yaiba</a></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatem ex adipisci quaerat
-                            incidunt nisi quis quasi reiciendis unde hic. Quod, perspiciatis laboriosam inventore odio
-                            aliquid tempora quae animi tenetur.</p>
-                    </div>
-                </div>
-                <div class="contentBox">
-                    <div class="image">
-                        <img src="img/img2.png" alt="">
-                    </div>
-                    <div class="contentText">
-                        <h4><a href="">kimetsu no yaiba</a></h4>
+                        <h4><a href="">one piece</a></h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptatem ex adipisci quaerat
                             incidunt nisi quis quasi reiciendis unde hic. Quod, perspiciatis laboriosam inventore odio
                             aliquid tempora quae animi tenetur.</p>
